# SparkEditor

./: .clang-format  .gitmodules  CMakeLists.txt  README.MD
assets/maps/: test.map
bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SparkEditor.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
bulid/extlibs/SparkEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SparkEngine.sln  cmake_install.cmake
bulid/extlibs/SparkEngine/extlibs/SFML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
bulid/extlibs/SparkEngine/src/SparkEngine/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SparkEngine.vcxproj  SparkEngine.vcxproj.filters  cmake_install.cmake
bulid/lib/Debug/: SparkEngine.lib  sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d.exp  sfml-window-d.lib
bulid/src/SparkEditor/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SparkEditor.vcxproj  SparkEditor.vcxproj.filters  cmake_install.cmake
bulid/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
bulid/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
include/SparkEditor/: EditorWorld.hpp  TileMapEditorCamera.hpp  TileMapEditorLevel.hpp
src/SparkEditor/: CMakeLists.txt  EditorWorld.cpp  Main.cpp  TileMapEditorCamera.cpp  TileMapEditorLevel.cpp
(+168 files in other folders)
